{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 162,
  "lineage": "df69236d-cfd2-6205-2167-f7ceae2fa0ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mantis-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:security-group/sg-02aacd8f727453391",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02aacd8f727453391",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mantis-sg",
            "name_prefix": "",
            "owner_id": "536460581283",
            "revoke_rules_on_delete": false,
            "tags": {
              "ita_group": "Lv-543"
            },
            "timeouts": null,
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05ce743d256b534a9",
            "domain": "vpc",
            "id": "eipalloc-0f32ffcaebcb1b0f9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0585de8038badd652",
            "private_dns": "ip-10-0-101-156.us-east-2.compute.internal",
            "private_ip": "10.0.101.156",
            "public_dns": "ec2-3-14-212-135.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.212.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-east-2a",
              "ita_group": "Lv-543"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0100cf2d865783765",
            "domain": "vpc",
            "id": "eipalloc-0aad3bb250248973b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ea94a755d0004222",
            "private_dns": "ip-10-0-102-103.us-east-2.compute.internal",
            "private_ip": "10.0.102.103",
            "public_dns": "ec2-3-140-120-114.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.120.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-east-2b",
              "ita_group": "Lv-543"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:internet-gateway/igw-0e4a6c922e1afb79e",
            "id": "igw-0e4a6c922e1afb79e",
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f32ffcaebcb1b0f9",
            "id": "nat-0f7a234bbf623f1a1",
            "network_interface_id": "eni-0585de8038badd652",
            "private_ip": "10.0.101.156",
            "public_ip": "3.14.212.135",
            "subnet_id": "subnet-0452511713bb6f1b8",
            "tags": {
              "Name": "my-vpc-us-east-2a",
              "ita_group": "Lv-543"
            }
          },
          "dependencies": [
            "module.vpc_mantis.aws_eip.nat",
            "module.vpc_mantis.aws_internet_gateway.this",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aad3bb250248973b",
            "id": "nat-0eebc4b769d44008f",
            "network_interface_id": "eni-0ea94a755d0004222",
            "private_ip": "10.0.102.103",
            "public_ip": "3.140.120.114",
            "subnet_id": "subnet-0385b0fea68ffa1dc",
            "tags": {
              "Name": "my-vpc-us-east-2b",
              "ita_group": "Lv-543"
            }
          },
          "dependencies": [
            "module.vpc_mantis.aws_eip.nat",
            "module.vpc_mantis.aws_internet_gateway.this",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cf656660c00ac3ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f7a234bbf623f1a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf656660c00ac3ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_eip.nat",
            "module.vpc_mantis.aws_internet_gateway.this",
            "module.vpc_mantis.aws_nat_gateway.this",
            "module.vpc_mantis.aws_route_table.private",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050567c01b29ac1561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eebc4b769d44008f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050567c01b29ac156",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_eip.nat",
            "module.vpc_mantis.aws_internet_gateway.this",
            "module.vpc_mantis.aws_nat_gateway.this",
            "module.vpc_mantis.aws_route_table.private",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4a6c922e1afb79e",
            "id": "r-rtb-0e552d71e87f7966a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e552d71e87f7966a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_internet_gateway.this",
            "module.vpc_mantis.aws_route_table.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cf656660c00ac3ee",
            "owner_id": "536460581283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f7a234bbf623f1a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-private-us-east-2a",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-050567c01b29ac156",
            "owner_id": "536460581283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eebc4b769d44008f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-private-us-east-2b",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e552d71e87f7966a",
            "owner_id": "536460581283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4a6c922e1afb79e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035244414efc8513b",
            "route_table_id": "rtb-0cf656660c00ac3ee",
            "subnet_id": "subnet-0b6d371855d4102bf"
          },
          "dependencies": [
            "module.vpc_mantis.aws_route_table.private",
            "module.vpc_mantis.aws_subnet.private",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d330604e6484ab0",
            "route_table_id": "rtb-050567c01b29ac156",
            "subnet_id": "subnet-0055db405c014c88c"
          },
          "dependencies": [
            "module.vpc_mantis.aws_route_table.private",
            "module.vpc_mantis.aws_subnet.private",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b66ece3147b9eb1",
            "route_table_id": "rtb-0e552d71e87f7966a",
            "subnet_id": "subnet-0452511713bb6f1b8"
          },
          "dependencies": [
            "module.vpc_mantis.aws_route_table.public",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f0eaffa23177af0",
            "route_table_id": "rtb-0e552d71e87f7966a",
            "subnet_id": "subnet-0385b0fea68ffa1dc"
          },
          "dependencies": [
            "module.vpc_mantis.aws_route_table.public",
            "module.vpc_mantis.aws_subnet.public",
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:subnet/subnet-0b6d371855d4102bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b6d371855d4102bf",
            "map_public_ip_on_launch": false,
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc-private-us-east-2a",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:subnet/subnet-0055db405c014c88c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0055db405c014c88c",
            "map_public_ip_on_launch": false,
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc-private-us-east-2b",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:subnet/subnet-0452511713bb6f1b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0452511713bb6f1b8",
            "map_public_ip_on_launch": true,
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc-public-us-east-2a",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:subnet/subnet-0385b0fea68ffa1dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0385b0fea68ffa1dc",
            "map_public_ip_on_launch": true,
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc-public-us-east-2b",
              "ita_group": "Lv-543"
            },
            "vpc_id": "vpc-0277a065c479d017d"
          },
          "dependencies": [
            "module.vpc_mantis.aws_vpc.this",
            "module.vpc_mantis.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mantis",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:536460581283:vpc/vpc-0277a065c479d017d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5e3e5656830ea01",
            "default_route_table_id": "rtb-067683e6a169d924c",
            "default_security_group_id": "sg-073eb9cfe5dae316a",
            "dhcp_options_id": "dopt-0b20ab076ee6811b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0277a065c479d017d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067683e6a169d924c",
            "owner_id": "536460581283",
            "tags": {
              "Name": "my-vpc",
              "ita_group": "Lv-543"
            }
          }
        }
      ]
    }
  ]
}